@@ -159,6 +159,40 @@ The board revision is the same as the GPIO pin layout on the board:
 
     my $revision = $pi->gpio_layout;
 
+=head2 Identifying which Raspberry Pi hardware you're working on
+
+We've got a couple of methods that are helpers that allow you to physically see
+which Raspberry Pi board you're currently working on.
+
+WARNING: These methods call system command line commands using C<sudo>
+internally!
+
+    # turn off the red power LED
+
+    $pi->pwr_led(1);
+
+    # turn the green disk IO activity light on full-time
+
+    $pi->io_led(1);
+
+    sleep 10;
+
+    # restore the red power LED back to normal operation
+
+    $pi->pwr_led;
+
+    # restore the green disk IO activity LED back to normal operation
+
+    $pi->io_led;
+
+=head2 Setting a label/name for your Pi object
+
+You can set, and then retrieve a label/name within your Pi object for easy
+identification within your scripts.
+
+    $pi->label('pi-test-01');
+    print $pi->label . "\n"; # pi-test-01
+
 =head1 PIN 
 
 =head2 Creating and using a GPIO pin object
